Add login and members template

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,8 @@
   </p>
   <p>
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    update any existing page or create new pages..
   </p>
+  <button ion-button color="secondary" (click)="openMembersPage()">GO TO MEMBERS</button>
+  <button ion-button color="secondary" (click)="openLoginPage()">GO TO LOGIN</button>
 </ion-content>
