- Working with firebase authentication - Add login functionality

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,4 +16,5 @@
   </p>
   <button ion-button color="secondary" (click)="openMembersPage()">GO TO MEMBERS</button>
   <button ion-button color="secondary" (click)="openLoginPage()">GO TO LOGIN</button>
+  <button ion-button color="secondary" (click)="openActivityPage()">GO TO ACTIVITY</button>
 </ion-content>
