--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -1,19 +1,18 @@
 <!--
-  Generated template for the MembersPage page.
+  Generated template for the ActivityPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
 <ion-header>
 
   <ion-navbar>
-    <ion-title>members</ion-title>
+    <ion-title>activity</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-	<button ion-button color="secondary" (click)="popGoBackThis()">GO BACK</button>
+	<div>This is activity page...</div>
 </ion-content>
