working on registration with firebase

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -38,7 +38,7 @@
 	  </ion-item>	  
 
 	  <ion-item>
-	  	<!-- <button ion-button color="secondary" (click)="addUser();">REGISTER</button> -->
+	  	<button ion-button color="secondary" (click)="addUser();">REGISTER</button>
 	  </ion-item>
 
 	</ion-list>
