--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,7 +29,7 @@
 
 	  <ion-item>
 	  	<button ion-button color="secondary" (click)="signIn();">LOGIN</button>
-	  	<button ion-button color="primary" (click)="signUp();">SIGN UP</button>
+	  	<button ion-button color="primary" (click)="openSignUpPage();">SIGN UP</button>
 	  </ion-item>
 
 	</ion-list>
